<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/constraintBap"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.dosen.DetailBapActivity">


    <LinearLayout
        android:id="@+id/linearBap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/abu"
        android:padding="10dp"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dosen" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Matakuliah" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ruangan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pertemuan" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSesiDosen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:text="null" />

            <TextView
                android:id="@+id/tvSesiMatakuliah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:text="null" />

            <TextView
                android:id="@+id/tvSesiRuangan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:text="null" />

            <TextView
                android:id="@+id/tvSesiPertemuan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="3dp"
                android:text="null" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearBapForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DAE8FC"
        android:padding="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearBap">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Materi" />

            <EditText
                android:id="@+id/etMateriSesiKelas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Materi" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Catatan" />

            <EditText
                android:id="@+id/etCatatanSesiKelas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Masukan Catatan" />

<!--            <TextView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Materi" />-->

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/abu"
        android:padding="10dp"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearBapForm">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ViewLogMahasiswa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginLeft="2dp"
                android:layout_marginVertical="10dp"
                android:text="Lihat Mahasiswa" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:background="@drawable/button_ripple"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/putih"
                android:text="Submit" />

            <Switch
                android:id="@+id/ButtonSwitch"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="3dp"
                android:text="Sesi Kelas" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/emptyBap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="Anda Sudah Submit Bap Pada Kelas Ini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>