...
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout6" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintKelas"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/constraint_ripple"
...
