...
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:text="Submit" />

            <Switch
                android:id="@+id/ButtonSwitch"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="3dp"
                android:text="Sesi Kelas"/>

        </LinearLayout>
...
