...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashIgm">

        <TextView
            android:id="@+id/mainMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp"
            android:textSize="14sp"
            android:text="Menu"/>
...
        android:accessibilityLiveRegion="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linerEmptyView">

        <GridView
            android:id="@+id/gridView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnWidth="600dp"
            android:gravity="center"
            android:numColumns="1"
            android:stretchMode="columnWidth"
...
