...
                android:clickable="false"
                android:text="Username"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tvInfoLogoutDosen"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="10dp"
            android:elevation="2dp"
            android:background="@drawable/content_informasi"
            android:foreground="?android:attr/selectableItemBackground"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:clickable="false"
                android:text="Keluar"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
