<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_menu"
        android:title="@string/home"
        android:icon="@drawable/ic_home_black_24dp"/>

    <item
        android:id="@+id/bap_menu"
        android:title="Bap"
        android:icon="@drawable/ic_book_black_24dp"/>

    <item
        android:id="@+id/jadwal_dosen"
        android:title="Jadwal"
        android:icon="@drawable/ic_perm_contact_calendar_black_24dp"/>

    <item
        android:id="@+id/account_menu"
        android:title="@string/account"
        android:icon="@drawable/ic_account_circle_black_24dp"/>

</menu>