...
                android:textStyle="bold"
                android:text="Jam"/>

        </LinearLayout>

        <Button
            android:id="@+id/btsPresensi"
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_ripple"
            android:textColor="@color/white"
            android:textSize="15sp"
...
